Fix document list focus state spacing
- only occurs between title link and description, so just added a bit more spacing to solve the problem

--- a/app/assets/stylesheets/govuk_publishing_components/components/_document-list.scss
+++ b/app/assets/stylesheets/govuk_publishing_components/components/_document-list.scss
@@ -45,7 +45,7 @@
 
 .gem-c-document-list__item-description {
   @include govuk-text-colour;
-  margin: 0 0 5px 0;
+  margin: govuk-spacing(1) 0;
 }
 
 .gem-c-document-list__subtext {
